--- a/lib.css
+++ b/lib.css
@@ -24,6 +24,16 @@ p.display {
 	width: 45%;
 }
 
+p.title {
+	border: none;
+	background-color: #e0e0e0;
+	border-radius: 0;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	padding: 5px;
+}
+
 p.entry {
 	border-style: solid;
 	border-width: 2px;
